--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -31,13 +31,13 @@ jobs:
               uses: actions/configure-pages@v4
 
             - name: Run shell script to merge files
-              run: bash ./build.sh
-
+              run: bash build.sh
+                         
             - name: Isolate files of interest
               run: |
                   mkdir public
-                  cp -R index.html
-                  cp -R style/
+                  cp -R index.html public/
+                  cp -R style/ public/
 
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
